--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,4 @@
-@import './variables/colors';
-
-body {
-	background-color: $base-color;
-}
+@import './core/variables';
+@import './core/mixins';
+@import './core/main';
+@import './components/tuneList';
