--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -4,11 +4,8 @@ $text-color: #14141f;
 $text-reverse: #f2f2f2;
 $static-color: #20222b;
 $error-color:  #cc0000;
-$orange: #ee7752;
-$pink: #e73c7e;
-$blue: #236ed5; 
-$seledine: #23D5AB;
 $black: #000;
+$white: #fff;
 
 $break-tablet: 768px;
 $break-desktop: 992px;
