--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
 @import './core/variables';
 @import './core/mixins';
 @import './core/main';
-@import './components/tuneList';
+@import './components/albumList';
