--- a/src/styles/components/albumList.scss
+++ b/src/styles/components/albumList.scss
@@ -9,9 +9,24 @@
 
  	&__content {
  		display: none;
+ 		padding-left: 20px;
  	}
 
  	&__item {
+ 		&::before {
+ 			position: absolute;
+ 			color: rgba($white, 0.1);
+ 			font-size: 50px;
+ 			display: block;
+ 			width: 100%;
+ 			height: 100%;
+ 			line-height: 100vh;
+ 			font-size: 400px;
+ 			text-align: center;
+ 			left: 0;
+ 			top: 0;	
+ 		}
+
 		&.is-active {
 			padding: 30px;
 			width: 100vw;
@@ -22,28 +37,51 @@
 			left: 0;
 			z-index: 1;
 			color: $white;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			@include respond-to(mobile) {
+				flex-wrap: wrap;
+				align-content: center;
+			}
+
+
+			&::before {
+				content: attr(data-index);
+			}
+
 
 			.albumList__image {
 				width: 300px;
 				padding-top: 300px;
-				display: inline-block;
 				transform: scale(1,1) translateX(100vw);
 				position: relative;
-				animation: moveImage 5s 0.5s forwards;
+				animation: moveImage 2.5s 0.5s forwards;
 			}
 
 			.albumList__content {
 				display: block;
+				transform: translateY(100vh);
+				animation: moveText 4s 3s forwards;
+
+				@include respond-to(mobile) {
+					width: 100%;
+				}
 			}
 		}
  	}
 }
 
 @keyframes moveImage {
-        0%   { transform: scale(1.1, 0.9) translateX(100vw);}
-        30%  { transform: scale(0.9,1.1) translateX(0);}
-        40%  { transform: scale(1.1,0.9)   translateX(0); }
-        50%  { transform: scale(0.95,1.05) translateX(0); }
-        57%  { transform: scale(1,1)      translateX(0); }
-        100% { transform: scale(1,1)      translateX(0); }
-    }
+	0%   { transform: scale(1.1, 0.9) translateX(100vw); }
+    40%  { transform: scale(0.9,1.1) translateX(0); }
+    60%  { transform: scale(1.1,0.9) translateX(0); }
+    80%  { transform: scale(0.95,1.05) translateX(0); }
+    100% { transform: scale(1,1) translateX(0); }
+}
+
+@keyframes moveText {
+	from { transform: translateY(100vh); }
+	to { transform: translateY(0); }
+}
