close buttn and accessibility

--- a/src/styles/components/albumList.scss
+++ b/src/styles/components/albumList.scss
@@ -1,4 +1,6 @@
 .albumList {
+	padding-top: 20px;
+
 	&__image {
 		background: $static-color no-repeat center;
 		background-size: cover;
@@ -10,9 +12,20 @@
  	&__content {
  		display: none;
  		padding-left: 20px;
+
+ 		a {
+ 			color: $white;
+ 			text-decoration: underline;
+
+ 			&:hover {
+ 				color: $action-color;
+ 			}
+ 		}
  	}
 
  	&__item {
+ 		cursor: pointer;
+
  		&::before {
  			position: absolute;
  			color: rgba($white, 0.1);
@@ -22,9 +35,24 @@
  			height: 100%;
  			line-height: 100vh;
  			font-size: 400px;
- 			text-align: center;
+ 			text-align: left;
  			left: 0;
- 			top: 0;	
+ 			top: 0;
+
+ 			@include respond-to(mobile) {
+ 				text-align: center;
+ 			}	
+ 		}
+
+ 		.button--close {
+ 			display: none;
+ 			position: absolute;
+    		top: 30px;
+    		right: 50px;
+
+    		@include respond-to(mobile) {
+    			right: 30px;
+    		}
  		}
 
 		&.is-active {
@@ -35,6 +63,7 @@
 			position: fixed;
 			background: $static-color;
 			left: 0;
+			top: 0;
 			z-index: 1;
 			color: $white;
 			display: flex;
@@ -44,6 +73,10 @@
 			@include respond-to(mobile) {
 				flex-wrap: wrap;
 				align-content: center;
+			}
+
+			.button--close {
+				display: block;
 			}
 
 
@@ -63,13 +96,17 @@
 			.albumList__content {
 				display: block;
 				transform: translateY(100vh);
-				animation: moveText 4s 3s forwards;
+				animation: moveText 2s 2.8s forwards;
 
 				@include respond-to(mobile) {
 					width: 100%;
 				}
 			}
 		}
+ 	}
+
+ 	&__label {
+ 		font-weight: bold;
  	}
 }
 
