--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -1,8 +1,7 @@
-$brand-color: #191970;
-$base-color: #c2c2d6;
+$brand-color: #09092b;
 $text-color: #14141f;
-$text-reverse: #f2f2f2;
 $static-color: #20222b;
+$action-color: #ffd700;
 $error-color:  #cc0000;
 $black: #000;
 $white: #fff;
