--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import './core/variables';
 @import './core/mixins';
 @import './core/main';
 @import './components/albumList';
 @import './components/buttons';
+@import './components/header';
+@import './components/navigation';
