--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -1,6 +1,6 @@
 .button {
 	cursor: pointer;
-	
+
 	&--close {
 		-webkit-appearance: none;
 	    background: transparent;
@@ -33,5 +33,51 @@
 				background: $action-color;
 			}
 		}
+	}
+
+	&--prev,
+	&--next {
+		-webkit-appearance: none;
+	    background: transparent;
+	    border: none;
+	    font-size: 0;
+	    width: 50px;
+	    height: 50px;
+	    text-align: center;
+	    margin: 30px;
+	    pointer-events: none;
+
+		&::before {
+			font-size: 40px;
+			border-style: solid;
+			border-width: 0.1em 0.1em 0 0;
+			border-color: rgba($white, 0.1);
+			content: '';
+			display: inline-block;
+			position: relative;
+			width: 40px;
+			height: 40px;
+		}
+
+		&.is-active {
+			pointer-events: all;
+
+			&::before {
+				border-color: $white;
+			}
+		}
+
+		&:hover::before {
+			cursor: pointer;
+			border-color: $action-color;
+		}
+	}
+
+	&--prev {
+		transform: rotate(-135deg);
+	}
+
+	&--next {
+		transform: rotate(45deg);
 	}
 }
