--- a/src/styles/core/main.scss
+++ b/src/styles/core/main.scss
@@ -1,8 +1,6 @@
 body {
-	font-family: Arial, sans-serif;
-	color: $text-color;
-}
-
-#app {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
 	background-color: $brand-color;
+	color: $text-color;
 }
