--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -1,5 +1,5 @@
 $brand-color: #09092b;
-$text-color: #14141f;
+$text-color: #f2f2f2;
 $static-color: #20222b;
 $action-color: #ffd700;
 $error-color:  #cc0000;
