--- a/src/styles/components/albumList.scss
+++ b/src/styles/components/albumList.scss
@@ -60,7 +60,7 @@
  		}
 
 		&.is-active {
-			padding: 30px;
+			padding: 30px 30px 120px;
 			width: 100vw;
 			height: 100vh;
 			max-width: none;
@@ -95,6 +95,11 @@
 				transform: scale(1,1) translateX(100vw);
 				position: relative;
 				animation: moveImage 2.5s 0.5s forwards;
+
+				@include respond-to(mobile) {
+					width: calc(50vh - 90px);
+					padding-top: calc(50vh - 90px);
+				}
 			}
 
 			.albumList__content {
@@ -104,6 +109,8 @@
 
 				@include respond-to(mobile) {
 					width: 100%;
+					max-height: calc(50vh - 150px);
+					overflow-y: scroll;
 				}
 			}
 		}
